--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ button:hover {
 <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
 
 <input type=hidden name="oid" value="00D8Z000000sDdO">
-<input type=hidden name="retURL" value="http://">
+<input type=hidden name="retURL" value="https://emrekayhan.github.io/thank-you/">
 
 <!--  ----------------------------------------------------------------------  -->
 <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
